force-app/main/default/objects/Product2/fields/Available_For_Promo__c.field-meta.xml
<CustomField>
    <fullName>Available_For_Promo__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines if this product can be used as a promo.</description>
    <label>Available For Promo</label>
    <type>Checkbox</type>
</CustomField>