force-app/main/default/objects/Product2/fields/AvailableBrandRelationship__c.field-meta.xml
<CustomField>
    <fullName>AvailableBrandRelationship__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available for Brand Relationship</label>
    <type>Checkbox</type>
</CustomField>