force-app/main/default/objects/Product2/fields/AvailableForApp__c.field-meta.xml
<CustomField>
    <fullName>AvailableForApp__c</fullName>
    <defaultValue>false</defaultValue>
    <label>AvailableForApp</label>
    <type>Checkbox</type>
</CustomField>