force-app/main/default/objects/Product2/fields/AvailableForCurrentAndPreviousBrand__c.field-meta.xml
<CustomField>
    <fullName>AvailableForCurrentAndPreviousBrand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available for Current and Previous Brand</label>
    <type>Checkbox</type>
</CustomField>