force-app/main/default/objects/Product2/fields/AvailableForOrder__c.field-meta.xml
<CustomField>
    <fullName>AvailableForOrder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available for Order</label>
    <type>Checkbox</type>
</CustomField>