force-app/main/default/objects/Product2/fields/AvailableForRewardRedemption__c.field-meta.xml
<CustomField>
    <fullName>AvailableForRewardRedemption__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available for Reward Redemption</label>
    <type>Checkbox</type>
</CustomField>