force-app/main/default/objects/Product2/fields/AvailableForSample__c.field-meta.xml
<CustomField>
    <fullName>AvailableForSample__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Available for Sample</label>
    <type>Checkbox</type>
</CustomField>