force-app/main/default/objects/Product2/fields/BrandRelationshipLink__c.field-meta.xml
<CustomField>
    <fullName>BrandRelationshipLink__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Relationship Link</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>1 AND 2 AND ((3 OR 4) OR (5 AND 6))</booleanFilter>
        <errorMessage>Selected product must be Available for Brand Relationship</errorMessage>
        <filterItems>
            <field>Product2.IsActive</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>Product2.AvailableBrandRelationship__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$User.UserType</field>
            <operation>equals</operation>
            <value>AutomatedProcess</value>
        </filterItems>
        <filterItems>
            <field>$Profile.Name</field>
            <operation>equals</operation>
            <value>System Administrator</value>
        </filterItems>
        <filterItems>
            <field>$User.UserType</field>
            <operation>notEqual</operation>
            <value>AutomatedProcess</value>
        </filterItems>
        <filterItems>
            <field>$User.Market__c</field>
            <operation>contains</operation>
            <valueField>Product2.Market__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Products (Brand Relationship Link)</relationshipLabel>
    <relationshipName>Products2</relationshipName>
    <type>Lookup</type>
</CustomField>