force-app/main/default/objects/Product2/fields/Bulk_Consumption_Days__c.field-meta.xml
<CustomField>
    <fullName>Bulk_Consumption_Days__c</fullName>
    <label>Bulk Consumption Days</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>