force-app/main/default/objects/Product2/fields/CompetitorProduct__c.field-meta.xml
<CustomField>
    <fullName>CompetitorProduct__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Competitor Product</label>
    <type>Checkbox</type>
</CustomField>