force-app/main/default/objects/Product2/fields/From__c.field-meta.xml
<CustomField>
    <fullName>From__c</fullName>
    <label>From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>