force-app/main/default/objects/Product2/fields/KeyBrand__c.field-meta.xml
<CustomField>
    <fullName>KeyBrand__c</fullName>
    <label>Key Brand</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Abbott General</fullName>
            </value>
            <value>
                <fullName>Abound</fullName>
            </value>
            <value>
                <fullName>Alitraq</fullName>
            </value>
            <value>
                <fullName>Bonesure</fullName>
            </value>
            <value>
                <fullName>Bright Choice</fullName>
            </value>
            <value>
                <fullName>Caltrate</fullName>
            </value>
            <value>
                <fullName>Diabetamill</fullName>
            </value>
            <value>
                <fullName>Elecare</fullName>
            </value>
            <value>
                <fullName>Ensure</fullName>
            </value>
            <value>
                <fullName>Ensure Diabetes Care</fullName>
            </value>
            <value>
                <fullName>Flexiflo</fullName>
            </value>
            <value>
                <fullName>Freego</fullName>
            </value>
            <value>
                <fullName>Glucerna</fullName>
            </value>
            <value>
                <fullName>Grow</fullName>
            </value>
            <value>
                <fullName>Isomil</fullName>
            </value>
            <value>
                <fullName>Jevity</fullName>
            </value>
            <value>
                <fullName>Kidneysure</fullName>
            </value>
            <value>
                <fullName>Nepro</fullName>
            </value>
            <value>
                <fullName>Nutr Accessories</fullName>
            </value>
            <value>
                <fullName>Osmolite</fullName>
            </value>
            <value>
                <fullName>Other MND</fullName>
            </value>
            <value>
                <fullName>Pediasure</fullName>
            </value>
            <value>
                <fullName>Polycose</fullName>
            </value>
            <value>
                <fullName>Prosure</fullName>
            </value>
            <value>
                <fullName>Pulmocare</fullName>
            </value>
            <value>
                <fullName>RCF</fullName>
            </value>
            <value>
                <fullName>Similac</fullName>
            </value>
            <value>
                <fullName>Similac Core</fullName>
            </value>
            <value>
                <fullName>Similac Mom</fullName>
            </value>
            <value>
                <fullName>Similac Total Comfort</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>