force-app/main/default/objects/Product2/fields/Max_Birth_Month__c.field-meta.xml
<CustomField>
    <fullName>Max_Birth_Month__c</fullName>
    <description>Identifies the maximum age of the child for eligible first purchase promo.</description>
    <label>Max Birth Month</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>