force-app/main/default/objects/Product2/fields/Max_eligible_for_Promo__c.field-meta.xml
<CustomField>
    <fullName>Max_eligible_for_Promo__c</fullName>
    <description>Controls how many quantity for sample you can order in a single order.</description>
    <label>Max eligible for Promo</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>