force-app/main/default/objects/Product2/fields/MC_ID_Sync_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>MC_ID_Sync_Eligibility__c</fullName>
    <formula>ispickval(Market__c,&apos;ID&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC ID Sync Eligibility</label>
    <type>Checkbox</type>
</CustomField>