force-app/main/default/objects/Product2/fields/MC_IN_Sync_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>MC_IN_Sync_Eligibility__c</fullName>
    <formula>ispickval(Market__c,&apos;IN&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC IN Sync Eligibility</label>
    <type>Checkbox</type>
</CustomField>