force-app/main/default/objects/Product2/fields/MC_SG_Sync_Eligibility__c.field-meta.xml
<CustomField>
    <fullName>MC_SG_Sync_Eligibility__c</fullName>
    <formula>ispickval(Market__c,&apos;SG&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MC SG Sync Eligibility</label>
    <type>Checkbox</type>
</CustomField>