force-app/main/default/objects/Product2/fields/MC_Sync_Eligibility_TH__c.field-meta.xml
<CustomField>
    <fullName>MC_Sync_Eligibility_TH__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MC Sync Eligibility TH</label>
    <type>Checkbox</type>
</CustomField>