force-app/main/default/objects/Product2/fields/Min_Birth_Month__c.field-meta.xml
<CustomField>
    <fullName>Min_Birth_Month__c</fullName>
    <description>Identifies the minimum age of the child for eligible first purchase promo.</description>
    <label>Min Birth Month</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>