force-app/main/default/objects/Product2/fields/Min_Bulk_Quantity__c.field-meta.xml
<CustomField>
    <fullName>Min_Bulk_Quantity__c</fullName>
    <label>Min Bulk Quantity</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>