force-app/main/default/objects/Product2/fields/PackageRefNo__c.field-meta.xml
<CustomField>
    <fullName>PackageRefNo__c</fullName>
    <displayFormat>PRN-{000000}</displayFormat>
    <label>Package Ref No</label>
    <type>AutoNumber</type>
</CustomField>