force-app/main/default/objects/Product2/fields/PLMap__c.field-meta.xml
<CustomField>
    <fullName>PLMap__c</fullName>
    <label>P&amp;L Map</label>
    <length>255</length>
    <type>Text</type>
</CustomField>