force-app/main/default/objects/Product2/fields/ProductHierarchyLevel__c.field-meta.xml
<CustomField>
    <fullName>ProductHierarchyLevel__c</fullName>
    <label>Product Hierarchy Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Key Brand</fullName>
            </value>
            <value>
                <fullName>Brand</fullName>
            </value>
            <value>
                <fullName>Sub - Brand</fullName>
            </value>
            <value>
                <fullName>Product Group</fullName>
            </value>
            <value>
                <fullName>Product</fullName>
            </value>
            <value>
                <fullName>Others</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>