force-app/main/default/objects/Product2/fields/ProductRef__c.field-meta.xml
<CustomField>
    <fullName>ProductRef__c</fullName>
    <displayFormat>P-{000000}</displayFormat>
    <label>Product Ref</label>
    <type>AutoNumber</type>
</CustomField>