force-app/main/default/objects/Product2/fields/RewardsPointsRequired__c.field-meta.xml
<CustomField>
    <fullName>RewardsPointsRequired__c</fullName>
    <description>Reward points required for redemption</description>
    <label>Rewards Points Required</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>