force-app/main/default/objects/Product2/fields/SAP_Product_Code__c.field-meta.xml
<CustomField>
    <fullName>SAP_Product_Code__c</fullName>
    <label>SAP Product Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>