force-app/main/default/objects/Product2/fields/Stage1PaidSample__c.field-meta.xml
<CustomField>
    <fullName>Stage1PaidSample__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stage 1 Paid Sample</label>
    <type>Checkbox</type>
</CustomField>