force-app/main/default/objects/Product2/fields/Stage3PaidSample__c.field-meta.xml
<CustomField>
    <fullName>Stage3PaidSample__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Stage 3 Paid Sample</label>
    <type>Checkbox</type>
</CustomField>