force-app/main/default/objects/Product2/fields/Unit__c.field-meta.xml
<CustomField>
    <fullName>Unit__c</fullName>
    <description>[11-Jul-21 KSK] TW Market data migration; Dynamics CRM</description>
    <label>Unit</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>罐</fullName>
            </value>
            <value>
                <fullName>袋</fullName>
            </value>
            <value>
                <fullName>組</fullName>
            </value>
            <value>
                <fullName>盒</fullName>
            </value>
            <value>
                <fullName>個</fullName>
            </value>
            <value>
                <fullName>包</fullName>
            </value>
            <value>
                <fullName>支</fullName>
            </value>
            <value>
                <fullName>PCS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>