force-app/main/default/objects/Product2/recordTypes/Gift.recordType-meta.xml
<RecordType>
    <fullName>Gift</fullName>
    <active>true</active>
    <label>Gift</label>
</RecordType>