force-app/main/default/objects/Product2/validationRules/Product_Access_Condition.validationRule-meta.xml
<ValidationRule>
    <fullName>Product_Access_Condition</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
  !ISNEW(),
  !CONTAINS($User.Market__c, TEXT(Market__c)) ,
  $Profile.Name != &apos;System Administrator&apos;
)</errorConditionFormula>
    <errorMessage>You are not allowed to modify Products from another Market.</errorMessage>
</ValidationRule>