force-app/main/default/objects/Product2/validationRules/Required_Rewards_Points.validationRule-meta.xml
<ValidationRule>
    <fullName>Required_Rewards_Points</fullName>
    <active>true</active>
    <description>Reward points is required when &quot;Available for Reward Redemption&quot; is true</description>
    <errorConditionFormula>AND( AvailableForRewardRedemption__c = TRUE,   ISBLANK(RewardsPointsRequired__c)   )</errorConditionFormula>
    <errorMessage>Rewards Points Required must be filled in for Product with &apos;Available for Reward Redemption&apos; checkbox set to &apos;True&apos;</errorMessage>
</ValidationRule>